--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -2,7 +2,7 @@ name: Events Demo
 on: 
   pull_request:
     types:
-      -opened
+      - opened
   workflow_dispatch:
   push:
     branches: 
@@ -16,6 +16,8 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+      - name : Output Event Data 
+        run : echo "${{ github.event}}"
       - name: Get code
         uses: actions/checkout@v3
       - name: Install dependencies
